// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#20, not 1`] = `
.c0 {
  box-shadow: inset 0 0 0 30px red;
}

<div
  className="c0"
/>
`;

exports[`#20, not 2`] = `
<div
  className=""
  disabled={true}
/>
`;

exports[`Attaching additional props 1`] = `
.c0 {
  color: palevioletred;
  font-size: 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  margin: 1em;
  padding: 1em;
  margin2: 1em;
  padding2: 1em;
}

.c1 {
  color: palevioletred;
  font-size: 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  margin: 2em;
  padding: 2em;
  margin2: 2em;
  padding2: 2em;
}

<div>
  <input
    className="c0"
    margin="1em"
    padding="1em"
    placeholder="A small text input"
    size="1em"
    type="password"
  />
  <br />
  <input
    className="c1"
    margin="2em"
    padding="2em"
    placeholder="A bigger text input"
    size="2em"
    type="password"
  />
</div>
`;

exports[`Support &&& 1`] = `
.c0.c0.c0 {
  color: palevioletred;
}

.c0.c0.c0second {
  color: red;
}

<div
  className="c0"
/>
`;

exports[`Support &&& 2`] = `
.c0.c0.c0 {
  color: palevioletred;
  font-weight: bold;
}

.c0.c0.c0second {
  color: red;
}

<div
  className="c0"
/>
`;

exports[`Support @media queries 1`] = `
@media screen and (min-width:900px) {
  .c0 article {
    padding: 1rem;
  }
}

<div
  className="c0"
  media="foo"
/>
`;

exports[`Support Element 1`] = `
.c0 a {
  color: red;
}

.c0 a.is-focused:not(.is-open) > .Select-control {
  cursor: text;
}

<div
  className="c0"
/>
`;

exports[`Support SC mixins 1`] = `
.c1 {
  border-bottom: red;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover,
.c1:hover.c0 {
  color: inherit;
}

<span>
  <div
    className="c0 "
  />
  <div
    className="c1"
    color="red"
  />
</span>
`;

exports[`Support placeholder on the root 1`] = `
.c0::-webkit-input-placeholder {
  color: #98a3b3ff;
}

.c0::-moz-placeholder {
  color: #98a3b3ff;
}

.c0:-ms-input-placeholder {
  color: #98a3b3ff;
}

.c0::placeholder {
  color: #98a3b3ff;
}

<div
  className="c0"
/>
`;

exports[`Support styling other components 1`] = `
.c2 {
  color: brown;
}

.c4 {
  color: red;
}

.c0 .c1,
.c0 .c3 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c4"
  />
</div>
`;

exports[`Support the styled-components css 1`] = `
.c0 {
  padding: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Support the styled-components css 2`] = `
.c0 {
  padding: 1rem;
  border: 1px solid red;
}

<div
  className="c0"
/>
`;

exports[`Support the styled-components syntax 1`] = `
.c0 {
  width: 400px;
  width: 400px;
  border: 1px solid #000;
  border: 1px solid #000;
  background: palevioletred;
  color: white;
  color2: #5cb85c;
  color3: red;
  box-shadow: inset 0 0 0 30px rgba(255,255,255,0.3);
}

<div
  className="c0"
  color="red"
/>
`;
